--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "devDependencies": {
         "@popperjs/core": "^2.0",
         "axios": "^1.6.4",
-        "bootstrap": "^4.0.0",
-        "laravel-vite-plugin": "^1.0.0",
-        "sass": "^1.15.2",
-        "vite": "^5.0.0",
-        "postcss": "^8.4.14",
-        "resolve-url-loader": "^3.1.0",
-        "sass-loader": "^8.0.0",
+        "bootstrap": "^5.3.3",
         "jquery": "^3.6",
-        "lodash": "^4.0"
+        "laravel-vite-plugin": "^1.0.0",
+        "lodash": "^4.0",
+        "postcss": "^8.4.14",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0",
+        "vite": "^5.0.0"
     },
-    "dependencies": {}
+    "dependencies": {
+        "chart.js": "^4.4.6"
+    }
 }
