--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
+        "laravel/ui": "^4.0",
         "livewire/livewire": "^2.11",
-        "laravel/ui": "^4.0"
+        "spatie/laravel-permission": "^6.10"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
