--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/laravel",
+    "name": "Website Pemeliharaan Telemetri-1",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
     "keywords": [
@@ -13,9 +13,9 @@
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.0",
+        
         "livewire/livewire": "^2.11",
-        "spatie/laravel-permission": "^6.10"
+        "laravel/ui": "^4.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
