--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "creagia/laravel-sign-pad": "^2.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
         "laravel/tinker": "^2.8",
-        "livewire/livewire": "^2.11",
-        "laravel/ui": "^4.0"
+        "laravel/ui": "^4.0",
+        "livewire/livewire": "^2.11"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
